# octotrack

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  README.md  build_rs_cov.profraw  config.toml  merge_tracks.sh  meta_info.json
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/scripts/: fix_apt_sources.py
.github/workflows/: ci.yml  release.yml
docs/: api.md  architecture.md  compatibility.md  configuration.md  development.md  installation.md  merge-tracks.md  raspberry-pi.md  schedules.md  troubleshooting.md
examples/: bigtext_test.rs
src/: app.rs  audio copy.rs  audio.rs  bigtext.rs  config.rs  eink.rs  handler.rs  lib.rs  main.rs  schedule.rs  setup.rs  tui.rs  ui.rs
src/web/: auth.rs  mod.rs  routes.rs  sse.rs
web/: dashboard.html  file.html  files.html  index.html  playback.html  recording.html  settings.html
web/assets/: app.js  style.css
