[package]
name = "octotrack"
version = "0.2.1"
authors = ["Jesse Stewart <jesse@jessestewart.com>"]
license = "GPL-3.0-only"
edition = "2021"

[dependencies]
anyhow = "1.0.83"
color-eyre = "0.6.3"
crossterm = "0.27.0"
dirs = "5.0"
itertools = "0.13.0"
libc = "0.2"
palette = "0.7.6"
ratatui = "0.26.0"
serde_json = "1.0.117"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3"
