[package]
name = "octotrack"
version = "0.2.3"
authors = ["Jesse Stewart <jesse@jessestewart.com>"]
license = "GPL-3.0-only"
edition = "2021"

[features]
default = ["gui", "web"]
gui = []
web = []
headless = []
eink = ["dep:rppal", "dep:embedded-graphics"]

[dependencies]
rppal = { version = "0.19", optional = true }
embedded-graphics = { version = "0.8", optional = true }
anyhow = "1.0.83"
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6.3"
crossterm = "0.27.0"
dirs = "5.0"
itertools = "0.13.0"
libc = "0.2"
palette = "0.7.6"
ratatui = "0.26.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.117"
toml = "0.8"
toml_edit = "0.22"
walkdir = "2.5.0"
argon2 = { version = "0.5", features = ["password-hash"] }
rand = "0.8"
rpassword = "7"
actix-web = "4"
actix-files = "0.6"
futures-util = "0.3"
jsonwebtoken = "9"
rust-embed = { version = "8", features = ["include-exclude"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tokio-stream = { version = "0.1", features = ["sync"] }
mime_guess = "2"

[dev-dependencies]
tempfile = "3"
